# fc-kernel-provisioner

./: .dockerignore  .gitignore  README.md  docker-compose.yml  pyproject.toml
.chainlit/: config.toml
apps/data_analyst/: Dockerfile  __main__.py  agent.py  app.py  chainlit.md  config.py  llm_provider.py  run.py
config/: Caddyfile  fc-caddy.service  fc-execution-api.service  fc-kernel-gateway.service  fc-pool-manager.service  fc-pool-xfs.yaml  fc-pool.yaml  setup_network.sh
config/kernelspec/: kernel.json
docs/: Kernel_Gateway_Firecracker_Provisioner_Spec.md  agent-tool-invocation.md  per-vm-kernel-gateway.md  performance-enhancements.md  performance-profile.md  snapshot-optimization.md  test-plan-data-analyst.md  testing-guide.md  testing.md
examples/: conversation_example.py  oneshot_example.py
execution_api/: Dockerfile  __init__.py  caddy_client.py  dashboard_sanitizer.py  models.py  pool_client.py  server.py
execution_api/_sandbox/: artifact_store.py  output.py  session.py
execution_api/tool_schemas/: claude.json  openai.json  tools.py
fc_pool_manager/: caddy_client.py  config.py  firecracker_api.py  manager.py  metrics.py  network.py  server.py  snapshot.py  vm.py  vsock.py
fc_provisioner/: __init__.py  kernel_ready_patch.py  pool_client.py  provisioner.py  vsock_client.py  warm_pool.py
guest/: build_rootfs.sh  dispatcher.py  fc_guest_agent.py  init.sh  seed_warm_imports.ipynb
infra/: Caddyfile  Dockerfile  start.sh
sandbox_client/: __init__.py  session.py
scripts/: benchmark_api.py  benchmark_snapshot.py  deploy.sh  generate_test_data.py  patch_jupyter_polling.sh  remote-test.sh  run-tests.sh  setup-host.sh
tests/: test_artifact_store.py  test_auto_cull.py  test_caddy_client.py  test_config.py  test_config_edge_cases.py  test_data_analyst.py  test_data_analyst_integration.py  test_data_analyst_llm.py  test_execution_api.py  test_firecracker_api.py  test_guest_agent.py  test_guest_agent_edge_cases.py  test_integration.py  test_metrics.py  test_network.py  test_network_edge_cases.py  test_network_hardening.py  test_output_parser.py  test_pool_manager.py  test_pool_manager_edge_cases.py  test_pool_server.py  test_provisioner.py  test_provisioner_edge_cases.py  test_server.py  test_server_edge_cases.py  test_session.py  test_snapshot.py  test_snapshot_reconfig.py  test_vm.py  test_vm_edge_cases.py  test_vm_timestamps.py  test_vsock_client.py  test_warm_pool_provisioner.py
tests/e2e/: conftest.py  test_agent_mock_llm.py  test_agent_real_llm.py
tests/infrastructure/: conftest.py  test_agent_mock_llm.py  test_agent_real_llm.py  test_dashboard.py  test_execution_api.py  test_pool.py  test_sandbox_client.py  test_smoke.py
tests/integration/: conftest.py  test_execution_api.py
tests/service/: conftest.py  fake_kg.py  test_agent.py  test_execution_api.py  test_sandbox_client.py
tests/unit/: test_artifact_store.py  test_caddy_client.py  test_config.py  test_config_edge_cases.py  test_dashboard_sanitizer.py  test_data_analyst.py  test_execution_api.py  test_firecracker_api.py  test_golden_snapshot.py  test_guest_agent.py  test_guest_agent_edge_cases.py  test_network.py  test_output_parser.py  test_pool_client.py  test_pool_manager_edge_cases.py  test_pool_server.py  test_prewarm.py  (+10 more)
(+16 files in other folders)
