[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fc-kernel-provisioner"
version = "0.1.0"
description = "Jupyter kernel provisioner for Firecracker microVMs"
requires-python = ">=3.11"
dependencies = [
    "jupyter_client>=7.0",
    "aiohttp>=3.9",
    "pyyaml>=6.0",
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "prometheus_client>=0.20",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-aiohttp>=1.0",
    "aioresponses>=0.7",
    "jupyter_kernel_gateway>=3.0",
    "httpx>=0.27",
]

apps = [
    "chainlit>=2.0",
    "anthropic>=0.40",
    "openai>=1.0",
]

[project.entry-points."jupyter_client.kernel_provisioners"]
firecracker-provisioner = "fc_provisioner:FirecrackerProvisioner"
firecracker-warm-pool = "fc_provisioner.warm_pool:WarmPoolProvisioner"

[tool.hatch.build.targets.wheel]
packages = ["fc_provisioner", "fc_pool_manager", "sandbox_client", "execution_api"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests/unit", "tests/service", "tests/infrastructure", "tests/e2e"]
markers = [
    "slow: uses real LLM API calls, costs money (deselect with '-m not slow')",
]
